--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sufi_fertilizer",
+  "name": "bismillah-autos",
   "version": "0.0.0",
-  "description": "sufi_fertilizer",
+  "description": "bismillah-autos",
   "main": "app.js",
   "author": {
     "name": "" },
